--- a/sass/global/variables.scss
+++ b/sass/global/variables.scss
@@ -8,9 +8,12 @@ $bold: 700;
 $black: #000000;
 $white: #ffffff;
 $gray: #f2f2f2;
+$gray-border: #e5e5e5;
 $blue-dark: #283645;
 $blue-dark-bg: #1d2631;
 $pink: #d22856;
+$green: #2aab6d;
+$green-darken: #1c9b5e;
 
 $tablet-width: 660px;
 $desktop-width: 960px;
