--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,3 +19,5 @@
 @import "blocks/contacts.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/social.scss";
+@import "blocks/feedback.scss";
+@import "blocks/form.scss";
