выполнена сортировка свойств в scss файлах

--- a/sass/blocks/button.scss
+++ b/sass/blocks/button.scss
@@ -1,27 +1,29 @@
 .button {
-  box-sizing: border-box;
+  @include font(18px, 18px);
   display: block;
+  box-sizing: border-box;
+  padding: 13px 10px 17px;
+  font-family: inherit;
+  font-weight: $bold;
   color: $white;
+  text-align: center;
+  cursor: pointer;
   background-color: transparent;
   border: 3px solid $white;
   border-radius: 27px;
-  @include font(18px, 18px);
-  font-weight: $bold;
-  padding: 13px 10px 17px;
-  text-align: center;
   transition: all 0.3s ease-in;
+
+  @include desktop {
+    @include font(21px, 18px);
+  }
 
   &:hover,
   &:focus {
-    background-color: $white;
     color: $pink;
+    background-color: $white;
   }
 
   &:active {
     color: rgba($pink, 0.3);
-  }
-
-  @include desktop {
-    @include font(21px, 18px);
   }
 }
