--- a/sass/blocks/main-header.scss
+++ b/sass/blocks/main-header.scss
@@ -18,21 +18,21 @@
   }
 
   @include desktop {
-    padding: 0 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 10px;
   }
 }
 
 .main-header__content {
   position: relative;
+  height: 730px;
   margin-top: -66px;
   background-color: $blue-dark-bg;
   background-image: url("../img/bg-back-mobile@1x.jpg");
-  background-repeat: no-repeat;
   background-position: center top;
-  height: 730px;
+  background-repeat: no-repeat;
 
   @include tablet {
     margin-top: -110px;
@@ -41,36 +41,61 @@
   }
 
   @include desktop {
+    height: 853px;
     background-image: url("../img/bg-back-desktop@1x.jpg");
     background-position: center top;
-    height: 853px;
+  }
+}
+
+.main-header__content--index::after {
+  content: "";
+  position: absolute;
+  top: 175px;
+  left: calc(50% - 170px);
+  width: 258px;
+  height: 286px;
+  background-image: url("../img/iphone-hand-mobile@1x.png");
+  background-repeat: no-repeat;
+
+  @include tablet {
+    top: auto;
+    bottom: 0;
+    left: calc(50% - 170px);
+    width: 520px;
+    height: 545px;
+    background-image: url("../img/iphone-hand-tablet@1x.png");
+    background-position: right bottom;
   }
 
-  &::after {
-    content: "";
-    position: absolute;
-    width: 258px;
-    height: 286px;
-    top: 175px;
-    left: calc(50% - 170px);
-    background-image: url("../img/iphone-hand-mobile@1x.png");
-    background-repeat: no-repeat;
+  @include desktop {
+    width: 620px;
+    height: 650px;
+    background-image: url("../img/iphone-hand-desktop@1x.png");
+    background-position: right -145px bottom;
+  }
+}
+
+.main-header__content--inner-page {
+  height: 237px;
+
+  @include tablet {
+    height: 440px;
+  }
+
+  @include desktop {
+    height: 400px;
+  }
+
+  .main-header__slogan {
+    display: block;
+    margin-top: 100px;
+    font-weight: $light;
+    text-align: center;
+    @include font(24px, 1.15);
 
     @include tablet {
-      bottom: 0;
-      top: auto;
-      width: 520px;
-      height: 545px;
-      left: calc(50% - 170px);
-      background-image: url("../img/iphone-hand-tablet@1x.png");
-      background-position: right bottom;
-    }
-
-    @include desktop {
-      width: 620px;
-      height: 650px;
-      background-image: url("../img/iphone-hand-desktop@1x.png");
-      background-position: right -145px bottom;
+      margin-top: 180px;
+      @include font(50px, 1.2);
     }
   }
 }
@@ -82,19 +107,19 @@
 }
 
 .main-header__promo {
+  z-index: 5;
   box-sizing: border-box;
   width: 320px;
   padding: 30px 0 20px;
   margin: 0 auto;
   margin-top: auto;
   text-align: center;
-  z-index: 5;
 
   @include tablet {
+    width: 300px;
     margin: 0;
     margin-top: auto;
     margin-bottom: 80px;
-    width: 300px;
   }
 
   @include desktop {
@@ -107,19 +132,19 @@
 
   @include tablet {
     display: block;
-    @include font(40px, 1.2);
     font-weight: $light;
+    @include font(40px, 1.2);
   }
 
   @include desktop {
-    @include font(50px, 1.2);
     margin-bottom: 55px;
+    @include font(50px, 1.2);
   }
 }
 
 .main-header__description {
-  font-weight: $light;
   margin: 10px 0;
+  font-weight: $light;
   @include font(14px, 24px);
 
   @include tablet {
@@ -130,15 +155,23 @@
 .main-header__toggle {
   @include image-replacement;
   position: absolute;
-  z-index: 10;
-  right: 20px;
   top: 0;
-  height: 66px;
+  right: 20px;
+  z-index: 10;
   width: 52px;
+  height: 66px;
+  padding: 0;
+  cursor: pointer;
   background-color: transparent;
   border: none;
-  cursor: pointer;
-  padding: 0;
+
+  @include tablet {
+    top: 26px;
+  }
+
+  @include desktop {
+    display: none;
+  }
 
   &::before {
     content: "";
@@ -161,14 +194,6 @@
   &:active::before,
   &:active::after {
     opacity: 0.3;
-  }
-
-  @include tablet {
-    top: 26px;
-  }
-
-  @include desktop {
-    display: none;
   }
 }
 
