--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -1,7 +1,7 @@
 .main-nav {
   @include inner;
-  padding: 0;
   position: relative;
+  padding: 0;
 
   @include tablet {
     padding: 0;
@@ -10,8 +10,11 @@
   @include desktop {
     display: flex;
     align-items: center;
-    justify-content: flex-start;
     flex-flow: row wrap;
+    justify-content: flex-start;
+    width: auto;
+    margin: 0;
+    margin-right: -40px;
   }
 
   &--closed {
@@ -19,43 +22,38 @@
       display: none;
     }
   }
-
-  @include desktop {
-    margin: 0;
-    margin-right: -40px;
-  }
 }
 
 .main-nav__link {
-  @include font(18px, 32px);
   position: relative;
-  color: $white;
   display: block;
   padding: 16px;
-  text-align: center;
-  border-bottom: 1px solid $black;
-  background-color: $blue-dark;
-  text-transform: uppercase;
   font-weight: $bold;
-  box-shadow: 0px 1px 0px 0px rgba(255, 255, 255, 0.15) inset;
+  color: $white;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: $blue-dark;
+  border-bottom: 1px solid $black;
+  box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.15) inset;
+  @include font(18px, 32px);
 
   @include desktop {
+    padding: 0 40px;
+    font-weight: $normal;
+    text-transform: none;
     background-color: transparent;
     border: none;
     box-shadow: none;
-    font-weight: $normal;
-    text-transform: none;
-    padding: 0 40px;
 
     &--active::after {
-      box-sizing: border-box;
       content: "";
       position: absolute;
-      left: 40px;
       right: 40px;
+      bottom: -5px;
+      left: 40px;
+      box-sizing: border-box;
       height: 2px;
       background-color: $white;
-      bottom: -5px;
     }
   }
 }
