--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,3 +21,5 @@
 @import "blocks/social.scss";
 @import "blocks/feedback.scss";
 @import "blocks/form.scss";
+@import "blocks/gallery.scss";
+@import "blocks/new-post.scss";
