--- a/sass/blocks/main-header.scss
+++ b/sass/blocks/main-header.scss
@@ -113,6 +113,8 @@
 .main-header__content-inner {
   @include inner;
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   height: 100%;
 }
 
