--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -19,12 +19,12 @@
 }
 
 .form__block {
-  padding: 34px 20px 40px;
+  padding: 40px 20px 40px;
   margin: 0;
   border: none;
 
   @include tablet {
-    padding: 34px 58px 60px;
+    padding: 40px 58px 60px;
     border: 2px solid $gray-border;
 
     &--name {
@@ -37,6 +37,7 @@
     &--contacts {
       order: -1;
       padding: 0 58px;
+      padding-top: 40px;
       padding-bottom: 20px;
       margin-bottom: 60px;
     }
@@ -55,7 +56,7 @@
     }
 
     &--textarea {
-      padding-top: 55px;
+      padding-top: 37px;
       padding-bottom: 42px;
       margin-bottom: 68px;
     }
@@ -77,6 +78,7 @@
     &--contacts {
       width: 100%;
       padding-bottom: 8px;
+      padding-top: 35px;
       margin-bottom: 56px;
     }
 
@@ -121,7 +123,6 @@
   width: 250px;
   padding-top: 40px;
   margin: 0 auto;
-  margin-bottom: 5px;
   color: $pink;
   text-align: center;
   text-transform: uppercase;
@@ -133,23 +134,7 @@
     padding-top: 0;
   }
 
-  @include desktop {
-    &--contacts {
-      margin-bottom: 35px;
-    }
-  }
-
-  &--travel {
-    margin-bottom: 0;
-  }
-
-  &--emotions {
-    margin-bottom: -18px;
-  }
-
   &--contacts {
-    margin-bottom: 40px;
-
     @include mobile-only {
       @include visually-hidden;
     }
@@ -245,7 +230,8 @@
   box-sizing: border-box;
   width: 100%;
   height: 62px;
-  padding: 20px;
+  padding: 15px;
+  padding-left: 20px;
   font-family: inherit;
   font-weight: $normal;
   color: $blue-dark;
@@ -271,7 +257,7 @@
     display: flex;
     align-items: flex-start;
     flex-flow: row wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
   }
 }
 
@@ -291,6 +277,7 @@
 
   @include desktop {
     width: 30%;
+    margin-right: 30px;
 
     &--selfie {
       order: 1;
@@ -310,10 +297,12 @@
 
     &--tower {
       order: 3;
+      margin-right: 0;
     }
 
     &--hotel {
       order: 6;
+      margin-right: 0;
     }
   }
 
