--- a/sass/blocks/new-post.scss
+++ b/sass/blocks/new-post.scss
@@ -131,8 +131,8 @@
     margin-bottom: 22px;
 
     &--contrast .new-post__icon{
-      width: auto;
-      height: auto;
+      width: 32px;
+      height: 32px;
     }
 
     &::after {
@@ -158,6 +158,16 @@
   width: 240px;
   padding: 25px 0;
   margin: 0 20px;
+
+  @include mobile-only {
+    opacity: 0;
+    z-index: -1;
+
+    &--crop {
+      opacity: 1;
+      z-index: 1;
+    }
+  }
 
   @include tablet {
     position: static;
@@ -264,4 +274,84 @@
     background-color:rgba($blue-dark, 0.3);
     color: rgba($white, 0.3);
   }
+}
+
+//стилизуем шкалу
+.new-post__scale {
+  -webkit-appearance: none;
+  background: transparent;
+}
+
+.new-post__scale::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 2px solid $pink;
+  height: 14px;
+  width: 14px;
+  border-radius: 50%;
+  background-color: $white;
+  cursor: pointer;
+  margin-top: -6px;
+
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: $pink;
+  }
+}
+
+.new-post__scale::-moz-range-thumb {
+  border: 2px solid $pink;
+  height: 14px;
+  width: 14px;
+  border-radius: 50%;
+  background-color: $white;
+  cursor: pointer;
+  margin-top: -6px;
+
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: $pink;
+  }
+}
+
+.new-post__scale::-ms-thumb {
+  border: 2px solid $pink;
+  box-sizing: border-box;
+  height: 14px;
+  width: 14px;
+  border-radius: 50%;
+  background-color: $white;
+  cursor: pointer;
+}
+
+.new-post__scale:hover::-ms-thumb,
+.new-post__scale:focus::-ms-thumb,
+.new-post__scale:active::-ms-thumb {
+  background-color: $pink;
+}
+
+.new-post__scale::-webkit-slider-runnable-track {
+  width: 100%;
+  background-color: $blue-dark;
+  height: 2px;
+}
+
+.new-post__scale::-moz-range-track {
+  width: 100%;
+  background-color: $blue-dark;
+  height: 2px;
+}
+
+.new-post__scale::-ms-track {
+  width: 100%;
+  background: transparent;
+  border-color: transparent;
+  background-color: $blue-dark;
+  overflow: visible;
+  height: 2px;
+}
+
+.new-post__scale::-ms-fill-lower {
+  background-color: $blue-dark;
 }
