--- a/sass/blocks/slider.scss
+++ b/sass/blocks/slider.scss
@@ -63,7 +63,9 @@
   width: 40px;
   height: 60px;
   cursor: pointer;
-  opacity: 30%;
+  opacity: 0.3;
+  border: none;
+  outline: none;
 
   @include device-only {
     display: none;
@@ -77,6 +79,15 @@
   &--next {
     right: 0;
     background: url("../img/icon-review-arrow-right.svg") no-repeat right center;
+  }
+
+  &:hover,
+  &:focus {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.1;
   }
 }
 
