--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -19,12 +19,25 @@
 }
 
 .form__block {
-  padding: 40px 20px 40px;
+  position: relative;
+  padding: 34px 20px 40px;
   margin: 0;
   border: none;
 
+  &--checkbox {
+    padding-top: 115px;
+  }
+
+  &--apps {
+    padding-top: 112px;
+  }
+
+  &--textarea {
+    padding-top: 72px;
+  }
+
   @include tablet {
-    padding: 40px 58px 60px;
+    padding: 34px 58px 60px;
     border: 2px solid $gray-border;
 
     &--name {
@@ -32,31 +45,32 @@
       padding-right: 0;
       padding-left: 0;
       border: none;
+      margin-bottom: 5px;
     }
 
     &--contacts {
       order: -1;
       padding: 0 58px;
-      padding-top: 40px;
+      padding-top: 45px;
       padding-bottom: 20px;
-      margin-bottom: 60px;
+      margin-bottom: 68px;
     }
 
     &--apps {
-      padding-top: 42px;
+      padding-top: 52px;
       padding-bottom: 55px;
-      padding-left: 58px;
-      margin-bottom: 55px;
+      padding-right: 0;
+      margin-bottom: 65px;
     }
 
     &--checkbox {
-      padding-top: 38px;
+      padding-top: 52px;
       padding-bottom: 45px;
-      margin-bottom: 58px;
+      margin-bottom: 66px;
     }
 
     &--textarea {
-      padding-top: 37px;
+      padding-top: 45px;
       padding-bottom: 42px;
       margin-bottom: 68px;
     }
@@ -71,27 +85,28 @@
     &--apps {
       box-sizing: border-box;
       width: 435px;
-      padding-top: 45px;
+      padding-top: 52px;
       padding-left: 0;
     }
 
     &--contacts {
       width: 100%;
       padding-bottom: 8px;
-      padding-top: 35px;
-      margin-bottom: 56px;
+      padding-top: 42px;
+      margin-bottom: 65px;
     }
 
     &--checkbox {
+      padding-top: 52px;
       padding-right: 10px;
       padding-bottom: 14px;
     }
 
     &--textarea {
       width: 100%;
-      padding-top: 50px;
+      padding-top: 42px;
       padding-bottom: 35px;
-      margin-bottom: 65px;
+      margin-bottom: 62px;
     }
   }
 }
@@ -109,7 +124,7 @@
 
   @include desktop {
     &--apps {
-      padding-top: 20px;
+      padding-top: 26px;
     }
 
     &--checkbox {
@@ -119,19 +134,28 @@
 }
 
 .form__title {
-  display: block;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   width: 250px;
+  top: 0;
   padding-top: 40px;
-  margin: 0 auto;
+  margin: 0 auto 5px;
   color: $pink;
   text-align: center;
   text-transform: uppercase;
   @include font(14px, 18px);
+  background-color: transparent;
 
   @include tablet {
     width: auto;
-    padding: 0 20px;
+    margin-bottom: 0;
+    padding: 0 30px;
     padding-top: 0;
+    background-color: $white;
+    z-index: 2;
+    transform: translate(-50%, -50%);
+    white-space: nowrap;
   }
 
   &--contacts {
@@ -277,22 +301,25 @@
 
   @include desktop {
     width: 30%;
-    margin-right: 30px;
 
     &--selfie {
       order: 1;
+      margin-right: 52px;
     }
 
     &--beach {
       order: 4;
+      margin-right: 52px;
     }
 
     &--norris {
       order: 2;
+      margin-right: 33px;
     }
 
     &--gift {
       order: 5;
+      margin-right: 33px;
     }
 
     &--tower {
